--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_core: ^2.8.0
   firebase_database: ^10.0.16
   cloud_firestore: ^4.5.0
+  image_picker: ^0.8.7+4
+  firebase_storage: ^11.1.1
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
