--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   image_picker: ^0.8.7+4
   firebase_storage: ^11.1.1
   path: ^1.8.2
+  flutter_phone_direct_caller: ^2.1.1
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_test:
